package facade;

public class SistemaFacade {

    public void registrarCliente() {

        System.out.println("Cliente registrado");
    }

    public void registrarOrden() {

        System.out.println("Orden tecnica registrada");
    }

    public void generarReporte() {

        System.out.println("Reporte generado");
    }
}
