package strategy;

public interface EstrategiaBusqueda {

    void buscar(String dato);
}
